# coyote-rs

./: Cargo.toml  Justfile  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: check-and-test.yml
examples/: connecting.rs
src/: lib.rs  messages.rs  messaging.rs  parameters.rs
src/snapshots/: coyote__messages__tests__encoding.snap  coyote__messaging__tests__encoding.snap
